2006-02-22  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* gdk/x11/gdkwindow-x11.c (set_wm_name, gdk_window_set_title,
	gdk_window_set_icon_name): Set non-UTF-8 legacy WM hints only if
	ENABLE_ICCCM_LEGACY is defined. Avoids needlessly loading iconv as it
	wastes quite a bit of memory for no benefit.

2006-02-22  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* */*.c: Add missing Since: tags for custom additions
	* docs/reference/gtk/gtk-sections: Add missing symbols
	* docs/reference/gtk/gtk-docs.sgml: Add new indices to collect symbols
	that would otherwise be missing from existing ones.

2006-02-22  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Merge from GNOME CVS. Improves things for GtkFileSystemMemory a bit.

    2006-01-15  Kristian Rietveld  <kris@gtk.org>

	Fixes #324099, Tommi Komulainen.

	* gtk/gtktreestore.[ch] (gtk_tree_store_insert_with_values),
	(gtk_tree_store_insert_with_valuesv): new functions, analog to
	those found in GtkListStore.

	* gtk/gtktreestore.c (gtk_tree_store_real_set_value),
	(gtk_tree_store_set_valist), (gtk_tree_store_set_valist_internal),
	(gtk_tree_store_sort_iter_changed): refactored.

	* gtk/gtk.symbols: updated.

	* tests/treestoretest.c: added a test for this new functionality.

2006-02-17  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Merge from GNOME CVS. Fixes N#22693

    2005-08-27  Matthias Clasen  <mclasen@redhat.com>

	* gdk/x11/gdkproperty-x11.c (gdk_property_get): Don't warn
	when G_MAXLONG is passed as length.

2006-02-17  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Merge from GNOME CVS. Fixes M#352

    2006-01-06  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkviewport.c (viewport_set_adjustment): Disconnect from
	the old adjustments signals.  (#325869, Jorn Baayen)

2006-02-16  Tomas Junnonen  <tomas.junnonen@nokia.com>

	* gtk/gtkimcontext.c
	* gtk/gtkimcontext.h
	* gtk/gtkimmulticontext.c: Added "hildon_gtk_im_context_filter_event"
	function