@@ -1908,9 +1908,6 @@ gtk_tree_model_filter_rows_reordered (GtkTreeModel *c_model,
 
   if (c_path == NULL || gtk_tree_path_get_indices (c_path) == NULL)
     {
-      if (!filter->priv->root)
-        return;
-
       length = gtk_tree_model_iter_n_children (c_model, NULL);
 
       if (filter->priv->virtual_root)
@@ -1938,8 +1935,7 @@ gtk_tree_model_filter_rows_reordered (GtkTreeModel *c_model,
 
       /* virtual root anchor reordering */
       if (filter->priv->virtual_root &&
-          gtk_tree_path_get_depth (c_path) <
-          gtk_tree_path_get_depth (filter->priv->virtual_root))
+	  gtk_tree_path_is_ancestor (c_path, filter->priv->virtual_root))
         {
           gint new_pos = -1;
           gint length;
@@ -2008,7 +2004,7 @@ gtk_tree_model_filter_rows_reordered (GtkTreeModel *c_model,
         }
     }
 
-  if (level->array->len < 1)
+  if (!level || level->array->len < 1)
     {
       gtk_tree_path_free (path);
       return;
