@@ -1,3 +1,10 @@
+2006-02-23  Kristian Rietveld  <kris@imendio.com>
+
+	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_rows_reordered):
+	Make sure we always update the virtual root, also when ->priv->root
+	is still NULL.  (Markku Vire)
+	N#22651
+
 2006-02-22  Tommi Komulainen  <tommi.komulainen@nokia.com>
 	
 	* gdk/x11/gdkwindow-x11.c (set_wm_name, gdk_window_set_title,
